# Mages

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts
.cargo/: config.toml
.github/: SECURITY.md  security.txt
.github/workflows/: aur-upload.yml  create-vendored-tarball.yml  publish-snap.yml  release-android.yml  release-desktop-macos.yml  release-desktop-windows.yml  release-desktop.yml
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
desktopApp/: build.gradle.kts
fastlane/metadata/android/en-US/: short_description.txt
fastlane/metadata/android/en-US/changelogs/: 1001.txt  1021.txt  1031.txt  1041.txt  1051.txt  1061.txt  1071.txt  1081.txt  1091.txt  1101.txt  1111.txt  1121.txt  1141.txt  1151.txt  1161.txt  1171.txt  1181.txt  1201.txt  1211.txt  1221.txt  1251.txt  1261.txt  421.txt  431.txt  441.txt  451.txt  461.txt  471.txt  481.txt  491.txt  501.txt  511.txt  521.txt  531.txt  541.txt  551.txt  561.txt  571.txt  581.txt  591.txt  (+31 more)
gradle/: libs.versions.toml
packaging/: icon.icns  io.github.mlm_games.mages.desktop  io.github.mlm_games.mages.metainfo.xml
packaging/snap/: snapcraft.yaml
rust/: Cargo.toml  uniffi.android.toml  uniffi.wasm.toml
rust/src/: core.rs  lib.rs  macros.rs  platform.rs  types.rs  verification_flow.rs  wasm_bridge.rs
rust/uniffi-bindgen/: Cargo.toml
shared/: build.gradle.kts
shared/src/androidMain/: AndroidManifest.xml
shared/src/androidMain/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  icon_monochrome.xml  outline_hangout_video_24.xml  outline_music_off_24.xml  outline_phone_callback_24.xml  outline_video_call_24.xml
shared/src/res/drawable/: ic_launcher_foreground.xml
webApp/: build.gradle.kts
webApp/src/wasmJsMain/kotlin/: main.kt
webApp/src/wasmJsMain/resources/: index.html
(+300 files in other folders)
