[package]
name = "mages_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = "0.29.4"

matrix-sdk = { version = "0.16.0", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "rustls-tls",
    "sso-login",
    "automatic-room-key-forwarding",
    "bundled-sqlite",
    "experimental-search",
    "experimental-widgets",
    # "uniffi",
] }
matrix-sdk-ui = { version = "0.16.0", default-features = false, features = [
    "rustls-tls",
] }
matrix-sdk-crypto = "0.16.0"
matrix-sdk-base = "0.16.0"

futures-util = "0.3"


tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
tracing = "0.1"
thiserror = "2"
mime = "0.3"
rand = "0.9.2"
blake3 = "1.8.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
js_int = "0.2.2"
uuid = "1.19"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
uniffi_bindgen = "0.29.4"

[patch.crates-io]
matrix-sdk = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "last-tag-cpick" }
matrix-sdk-base = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "last-tag-cpick" }
matrix-sdk-common = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "last-tag-cpick" }
matrix-sdk-crypto = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "last-tag-cpick" }
matrix-sdk-sqlite = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "last-tag-cpick" }
matrix-sdk-store-encryption = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "last-tag-cpick" }
matrix-sdk-ui = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "last-tag-cpick" }
matrix-sdk-search = { git = "https://github.com/mlm-games/matrix-rust-sdk", branch = "last-tag-cpick" }
